Fixed description not centered

--- a/frontend/general/all.css
+++ b/frontend/general/all.css
@@ -122,3 +122,7 @@ textarea {
     width: 100%;
     height: 100%;
 }
+
+table {
+    margin: auto;
+}
